Aligning about container to top and left edges. Fixes #4. Minor styling updates.

--- a/limeade/static/less/home.less
+++ b/limeade/static/less/home.less
@@ -61,6 +61,8 @@
         color: #ccc;
     }
 #about_container {
+    top: 0;
+    left: 0;
     display: none;
     position: fixed;
     width: 100%;
@@ -83,6 +85,9 @@
             line-height: 25px;
         }
         #about_container #about_message h1 {
+        }
+        #about_container #about_message h3 {
+            margin-top: 50px;
         }
 
 #left_panel {
